brat/test/golden/error/toplevel-leftovers2.brat.golden
Error in test/golden/error/toplevel-leftovers2.brat on line 2:
f(x) = x
       ^

  Type mismatch when checking x => 「x」

Expected: (_1 :: Nat, _2 :: Bool)
But got:  (_1 :: Nat)


